--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "form-data": "^4.0.0",
-    "node-fetch": "v2",
-    "sharp": "^0.32.1",
-    "ws": "^8.13.0"
+    "node-fetch": "^2.7.0",
+    "sharp": "^0.32.6",
+    "ws": "^8.14.2"
   },
   "repository": {
     "type": "git",
